force-app/main/default/objects/Deal__c/fields/Cruise_Cabin_Allocation_Status__c.field-meta.xml
<CustomField>
    <fullName>Cruise_Cabin_Allocation_Status__c</fullName>
    <defaultValue>&apos;None&apos;</defaultValue>
    <label>Cruise Cabin Allocation Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Cruise_Cabin_Booked_by__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Unsecured</fullName>
            </value>
            <value>
                <fullName>Secured</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>