force-app/main/default/objects/Deal__c/fields/Cruise_Cabin_Allocation_Status_NZ__c.field-meta.xml
<CustomField>
    <fullName>Cruise_Cabin_Allocation_Status_NZ__c</fullName>
    <label>Cruise Cabin Allocation Status - NZ</label>
    <type>TextArea</type>
</CustomField>