force-app/main/default/objects/Deal__c/fields/Cruise_Cabin_Booked_by__c.field-meta.xml
<CustomField>
    <fullName>Cruise_Cabin_Booked_by__c</fullName>
    <defaultValue>&apos;None&apos;</defaultValue>
    <label>Cruise Cabin Booked by</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TAD</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>