force-app/main/default/objects/Deal__c/fields/Cruise_Cabin_Booked_by_NZ__c.field-meta.xml
<CustomField>
    <fullName>Cruise_Cabin_Booked_by_NZ__c</fullName>
    <label>Cruise Cabin Booked by - NZ</label>
    <type>TextArea</type>
</CustomField>