force-app/main/default/objects/Deal__c/fields/Cruise_Cabin_Report__c.field-meta.xml
<CustomField>
    <fullName>Cruise_Cabin_Report__c</fullName>
    <formula>HYPERLINK( IF ($User.UIThemeDisplayed=&quot;Theme4d&quot;,
&quot;/lightning/r/00O2x0000041sfL/view?fv0=&quot;,
&quot;/00O2x0000041sfL?pv0=&quot;) &amp; Name, Deal_ID_Title__c &amp;&quot; Cruise Cabin Report&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cruise Cabin Report</label>
    <type>Text</type>
</CustomField>