force-app/main/default/objects/Deal__c/fields/Cruise_deal_shown_as_stay__c.field-meta.xml
<CustomField>
    <fullName>Cruise_deal_shown_as_stay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cruise deal shown as stay?</label>
    <type>Checkbox</type>
</CustomField>