force-app/main/default/objects/Deal__c/fields/CS_Departures_POE_Report__c.field-meta.xml
<CustomField>
    <fullName>CS_Departures_POE_Report__c</fullName>
    <formula>HYPERLINK( IF ($User.UIThemeDisplayed=&quot;Theme4d&quot;,
&quot;/lightning/r/00O2x000003esCt/view?fv0=&quot;,
&quot;/00O2x000003esCt?pv0=&quot;) &amp; Name, Deal_ID_Title__c &amp;&quot; Departures (POE) Report&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CS Departures (POE) Report</label>
    <type>Text</type>
</CustomField>