force-app/main/default/objects/Deal__c/fields/cs_departures_report__c.field-meta.xml
<CustomField>
    <fullName>cs_departures_report__c</fullName>
    <formula>HYPERLINK( IF ($User.UIThemeDisplayed=&quot;Theme4d&quot;,
&quot;/lightning/r/00O0K00000AOq57/view?fv0=&quot;,
&quot;/00O0K00000AOq57?pv0=&quot;) &amp; Name, Deal_ID_Title__c &amp;&quot; Departures Report&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CS Departures Report</label>
    <type>Text</type>
</CustomField>