force-app/main/default/objects/Deal__c/fields/CurrentGmaac__c.field-meta.xml
<CustomField>
    <fullName>CurrentGmaac__c</fullName>
    <formula>(((Total_Marketing_Spend__c/0.065)*(Estimated_Margin__c))/(Total_Marketing_Spend__c/0.065)*100)-((Total_Marketing_Spend__c/Total_Revenue_AU__c)*100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CurrentGmaac</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>