force-app/main/default/objects/Deal__c/fields/Dates_Flights__c.field-meta.xml
<CustomField>
    <fullName>Dates_Flights__c</fullName>
    <label>Dates Flights</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dates/Domestic Flights</fullName>
            </value>
            <value>
                <fullName>Dates/International Flights</fullName>
            </value>
            <value>
                <fullName>Dates/No Flights</fullName>
            </value>
            <value>
                <fullName>No Dates/No Flights</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>