force-app/main/default/objects/Deal__c/fields/Days_until_exhausted__c.field-meta.xml
<CustomField>
    <fullName>Days_until_exhausted__c</fullName>
    <formula>Total_Remaining_Allocations__c /  Rate_of_Sale__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days until exhausted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>