force-app/main/default/objects/Deal__c/fields/Deal_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Deal_Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal Account Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Deal4</relationshipName>
    <type>Lookup</type>
</CustomField>