force-app/main/default/objects/Deal__c/fields/deal_archetype__c.field-meta.xml
<CustomField>
    <fullName>deal_archetype__c</fullName>
    <label>Deal Archetype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MADU1</fullName>
            </value>
            <value>
                <fullName>MADUZ1</fullName>
            </value>
            <value>
                <fullName>MADU2</fullName>
            </value>
            <value>
                <fullName>MADUZ2</fullName>
            </value>
            <value>
                <fullName>TAIU1</fullName>
            </value>
            <value>
                <fullName>TAIZ1</fullName>
            </value>
            <value>
                <fullName>TAIUZ1</fullName>
            </value>
            <value>
                <fullName>TAIU2</fullName>
            </value>
            <value>
                <fullName>TAIZ2</fullName>
            </value>
            <value>
                <fullName>TAIUZ2</fullName>
            </value>
            <value>
                <fullName>TANU1</fullName>
            </value>
            <value>
                <fullName>TANZ1</fullName>
            </value>
            <value>
                <fullName>TANUZ1</fullName>
            </value>
            <value>
                <fullName>TANU2</fullName>
            </value>
            <value>
                <fullName>TANZ2</fullName>
            </value>
            <value>
                <fullName>TANUZ2</fullName>
            </value>
            <value>
                <fullName>MANU1</fullName>
            </value>
            <value>
                <fullName>MANUZ1</fullName>
            </value>
            <value>
                <fullName>MANU2</fullName>
            </value>
            <value>
                <fullName>MANUZ2</fullName>
            </value>
            <value>
                <fullName>RADU1</fullName>
            </value>
            <value>
                <fullName>RADUZ1</fullName>
            </value>
            <value>
                <fullName>RADU2</fullName>
            </value>
            <value>
                <fullName>RADUZ2</fullName>
            </value>
            <value>
                <fullName>CAIU1</fullName>
            </value>
            <value>
                <fullName>CAIZ1</fullName>
            </value>
            <value>
                <fullName>CAIUZ1</fullName>
            </value>
            <value>
                <fullName>CAIU2</fullName>
            </value>
            <value>
                <fullName>CAIZ2</fullName>
            </value>
            <value>
                <fullName>CAIUZ2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>