force-app/main/default/objects/Deal__c/fields/Deal_Card__c.field-meta.xml
<CustomField>
    <fullName>Deal_Card__c</fullName>
    <label>Deal Card</label>
    <type>Url</type>
</CustomField>