force-app/main/default/objects/Deal__c/fields/Deal_cruise_customisation_type__c.field-meta.xml
<CustomField>
    <fullName>Deal_cruise_customisation_type__c</fullName>
    <label>Deal cruise customisation type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Has cruise customisation cabin</fullName>
            </value>
            <value>
                <fullName>Has cruise customisation cabin and ancillaries</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>