force-app/main/default/objects/Deal__c/fields/Deal_Departure_City_Analysis_Report__c.field-meta.xml
<CustomField>
    <fullName>Deal_Departure_City_Analysis_Report__c</fullName>
    <formula>HYPERLINK( IF ($User.UIThemeDisplayed=&quot;Theme4d&quot;,
&quot;/lightning/r/00O2x000003pUZE/view?fv0=&quot;,
&quot;/00O2x000003pUZE?pv0=&quot;) &amp; Name, Deal_ID_Title__c &amp;&quot; Deal Departure City Analysis&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Departure City Analysis Report</label>
    <type>Text</type>
</CustomField>