force-app/main/default/objects/Deal__c/fields/Deal_Draft__c.field-meta.xml
<CustomField>
    <fullName>Deal_Draft__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal Draft</label>
    <referenceTo>Deal_Draft__c</referenceTo>
    <relationshipLabel>Deal</relationshipLabel>
    <relationshipName>Deal</relationshipName>
    <type>Lookup</type>
</CustomField>