force-app/main/default/objects/Deal__c/fields/Deal_Estimated_Margin__c.field-meta.xml
<CustomField>
    <fullName>Deal_Estimated_Margin__c</fullName>
    <formula>IF(Total_Sales__c &gt; 0, Deal_Estimated_Profit__c / Total_Sales__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Estimated Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>