force-app/main/default/objects/Deal__c/fields/Deal_Estimated_Profit__c.field-meta.xml
<CustomField>
    <fullName>Deal_Estimated_Profit__c</fullName>
    <formula>Total_Sales__c  - Total_Marketing_Spend__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Estimated Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>