force-app/main/default/objects/Deal__c/fields/Deal_Flag__c.field-meta.xml
<CustomField>
    <fullName>Deal_Flag__c</fullName>
    <label>Deal Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NRL</fullName>
            </value>
            <value>
                <fullName>NBA</fullName>
            </value>
            <value>
                <fullName>BBL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>