force-app/main/default/objects/Deal__c/fields/Deal_ID__c.field-meta.xml
<CustomField>
    <fullName>Deal_ID__c</fullName>
    <label>TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>travel</fullName>
            </value>
            <value>
                <fullName>cruise</fullName>
            </value>
            <value>
                <fullName>stay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>