force-app/main/default/objects/Deal__c/fields/Deal_ID_Title__c.field-meta.xml
<CustomField>
    <fullName>Deal_ID_Title__c</fullName>
    <formula>IF( ISBLANK(title__c) , 
Name&amp;&quot;-&quot;&amp;title_nz__c , 
Name&amp;&quot;-&quot;&amp;title__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal ID &amp; Title</label>
    <type>Text</type>
</CustomField>