force-app/main/default/objects/Deal__c/fields/Deal_KSP__c.field-meta.xml
<CustomField>
    <fullName>Deal_KSP__c</fullName>
    <label>Deal KSP</label>
    <length>131000</length>
    <type>Html</type>
</CustomField>