force-app/main/default/objects/Deal__c/fields/Deal_Margin_Check__c.field-meta.xml
<CustomField>
    <fullName>Deal_Margin_Check__c</fullName>
    <formula>IF(
Deal_Estimated_Margin__c &gt;= 0.20,
IMAGE(
&quot;/resource/1535695465000/GraphicsPackNew/fatcow/farmfresh/16/flag_green.png&quot; ,
&quot;Rating Level&quot;

),
IMAGE(
&quot;/resource/1535695465000/GraphicsPackNew/fatcow/farmfresh/16/flag_red.png&quot; ,
&quot;Rating Level&quot;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Margin % Check</label>
    <type>Text</type>
</CustomField>