force-app/main/default/objects/Deal__c/fields/Deal_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Deal_Open_Date__c</fullName>
    <description>Used to count the number of day that a field is live on site for</description>
    <label>Deal Open Date</label>
    <type>Date</type>
</CustomField>