force-app/main/default/objects/Deal__c/fields/Deal_PDF2__c.field-meta.xml
<CustomField>
    <fullName>Deal_PDF2__c</fullName>
    <description>Used to attach a deal type PDF to a deal record which can be accessed from TC portal</description>
    <formula>&quot;&amp;id=&quot; + Id + 
&quot;&amp;templateid=a4C0K000000D9iJ&quot; + 
&quot;&amp;defaultpdf=1&quot; + 
&quot;&amp;qmode=Attachments&quot; + 
&quot;&amp;ofn=&quot; + Name + &quot; &quot; + Agents__c + 
&quot;&amp;queryid=[TCItinerary]a4428000000E87Q,[TCOptions1]a4428000000E8Br,[TCSubOptions1]a4428000000E8CG,[TourInclusions]a4428000000YycV,[Dealpdf]a4428000000Yycu?pv0=&quot; + Agents__r.Acct_ID__c</formula>
    <label>Deal PDF-TC</label>
    <type>Text</type>
</CustomField>