force-app/main/default/objects/Deal__c/fields/Deal_related_component_cost__c.field-meta.xml
<CustomField>
    <fullName>Deal_related_component_cost__c</fullName>
    <description>Created by Rollup Helper</description>
    <label>Deal related component cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>