force-app/main/default/objects/Deal__c/fields/Deal_Revenue_Actual__c.field-meta.xml
<CustomField>
    <fullName>Deal_Revenue_Actual__c</fullName>
    <inlineHelpText>This is the actual profit provided by Finance.</inlineHelpText>
    <label>Deal Revenue $ Actual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>