force-app/main/default/objects/Deal__c/fields/Deal_Sales_Allocation_Summary_Report__c.field-meta.xml
<CustomField>
    <fullName>Deal_Sales_Allocation_Summary_Report__c</fullName>
    <formula>HYPERLINK( IF ($User.UIThemeDisplayed=&quot;Theme4d&quot;,
&quot;/lightning/r/00O2x000003pZtY/view?fv0=&quot;,
&quot;/00O2x000003pZtY?pv0=&quot;) &amp; Name, Deal_ID_Title__c &amp;&quot; Deal Sales/Allocation Summary&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BDM - Deal Sales/Allocation Summary</label>
    <type>Text</type>
</CustomField>