force-app/main/default/objects/Deal__c/fields/Deal_Status__c.field-meta.xml
<CustomField>
    <fullName>Deal_Status__c</fullName>
    <inlineHelpText>This field drives the status in the &quot;path&quot; at the top of the page to show the &quot;overall status&quot; of the deal.</inlineHelpText>
    <label>Deal Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BDM - Deal Draft In Progress</fullName>
                <default>true</default>
                <label>BDM - Deal Draft In Progress</label>
            </value>
            <value>
                <fullName>BDM - Submitted</fullName>
            </value>
            <value>
                <fullName>Plan &amp; Configure</fullName>
            </value>
            <value>
                <fullName>Submitted for Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>With_Publishing</fullName>
                <label>With Publishing</label>
            </value>
            <value>
                <fullName>Ready for Proofing</fullName>
            </value>
            <value>
                <fullName>Pre-Published</fullName>
            </value>
            <value>
                <fullName>Published</fullName>
                <color>#57F17C</color>
                <label>Published</label>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Analysis &amp; Approval</fullName>
                <isActive>false</isActive>
                <label>Analysis &amp; Approval</label>
            </value>
            <value>
                <fullName>BDM</fullName>
                <isActive>false</isActive>
                <label>BDM</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <isActive>false</isActive>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Marketing</fullName>
                <isActive>false</isActive>
                <label>Marketing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>