force-app/main/default/objects/Deal__c/fields/Deal_Ticketing_Report__c.field-meta.xml
<CustomField>
    <fullName>Deal_Ticketing_Report__c</fullName>
    <formula>HYPERLINK( IF ($User.UIThemeDisplayed=&quot;Theme4d&quot;,
&quot;/lightning/r/00O2x000003pUbA/view?fv0=&quot;,
&quot;/00O2x000003pUbA?pv0=&quot;) &amp; Name, Deal_ID_Title__c &amp;&quot; Deal Ticketing Report&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Ticketing Report</label>
    <type>Text</type>
</CustomField>