force-app/main/default/objects/Deal__c/fields/deal_type__c.field-meta.xml
<CustomField>
    <fullName>deal_type__c</fullName>
    <label>deal type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>travel</fullName>
            </value>
            <value>
                <fullName>cruise</fullName>
            </value>
            <value>
                <fullName>stay</fullName>
            </value>
            <value>
                <fullName>Siteminder Hotel</fullName>
            </value>
            <value>
                <fullName>Experiences</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>