force-app/main/default/objects/Deal__c/fields/deal_type_nz__c.field-meta.xml
<CustomField>
    <fullName>deal_type_nz__c</fullName>
    <label>Deal Type - NZ</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>travel</fullName>
            </value>
            <value>
                <fullName>cruise</fullName>
            </value>
            <value>
                <fullName>stay</fullName>
            </value>
            <value>
                <fullName>Siteminder Hotel</fullName>
                <isActive>false</isActive>
                <label>Siteminder Hotel</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>