force-app/main/default/objects/Deal__c/fields/Deal_Validation_Initiated__c.field-meta.xml
<CustomField>
    <fullName>Deal_Validation_Initiated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deal Validation Initiated</label>
    <type>Checkbox</type>
</CustomField>