force-app/main/default/objects/Deal__c/fields/DealPDF3Portal__c.field-meta.xml
<CustomField>
    <fullName>DealPDF3Portal__c</fullName>
    <formula>&quot;&amp;id=&quot; + Id +
&quot;&amp;templateid=a4C0K000000D9iJ&quot; + 
&quot;&amp;defaultpdf=1&quot; + 
&quot;&amp;ofn=&quot; + Name + &quot; &quot; +  Agents__c + 
&quot;&amp;queryid=[TCDealItinerary]a4428000000E87L,[TCItinerary]a440K000001R5co,[TCOptions1]a4428000000E8Br,[TCSubOptions1]a4428000000E8CG,[DepartureDate]a4428000000YycL,[TCCity]a4428000000YycG,[TourInclusions]a4428000000YycV,[Media]a4428000000Yyca,[Dealpdf]a4428000000Yycu?pv0=&quot; + Agents__r.Acct_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DealPDF3Portal</label>
    <type>Text</type>
</CustomField>