force-app/main/default/objects/Deal__c/fields/Departure_Airport_Code__c.field-meta.xml
<CustomField>
    <fullName>Departure_Airport_Code__c</fullName>
    <label>Departure Airport Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>