force-app/main/default/objects/Deal__c/fields/description__c.field-meta.xml
<CustomField>
    <fullName>description__c</fullName>
    <label>Deal Highlights</label>
    <length>250</length>
    <type>Text</type>
</CustomField>