force-app/main/default/objects/Deal__c/fields/description_NZ__c.field-meta.xml
<CustomField>
    <fullName>description_NZ__c</fullName>
    <label>Deal Highlights - NZ</label>
    <length>250</length>
    <type>Text</type>
</CustomField>