force-app/main/default/objects/Deal__c/fields/Desired_Book_By_End_Date_of_Deal__c.field-meta.xml
<CustomField>
    <fullName>Desired_Book_By_End_Date_of_Deal__c</fullName>
    <inlineHelpText>Please select the date you would like the deal to end.</inlineHelpText>
    <label>Desired Book By (end date of deal)</label>
    <type>Date</type>
</CustomField>