force-app/main/default/objects/Deal__c/fields/Desired_Publish_Date__c.field-meta.xml
<CustomField>
    <fullName>Desired_Publish_Date__c</fullName>
    <inlineHelpText>Please indicate the date you would like to be the start date of the deal.</inlineHelpText>
    <label>Desired Publish Date</label>
    <type>Date</type>
</CustomField>