force-app/main/default/objects/Deal__c/fields/destination__c.field-meta.xml
<CustomField>
    <fullName>destination__c</fullName>
    <label>Landing Page Destination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>